# boilerplate-poetry-project

./: .pre-commit-config.yaml  README.md  dependabot.yml  pyproject.toml
boilerplate_poetry_project/: add.py  api.py  multiply.py
tests/: test_add.py  test_multiply.py
